--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -12,6 +12,7 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
+		<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet" />
 		<link
 			rel="stylesheet"
 			type="text/css"
