--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -5,14 +5,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<title>Mise-En</title>
+		<link rel="preconnect" href="https://fonts.gstatic.com" />
 		<link
 			rel="stylesheet"
 			href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
 			integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
 			crossorigin="anonymous"
 		/>
-		<link rel="preconnect" href="https://fonts.gstatic.com" />
-		<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface" rel="stylesheet" />
 		<link
 			rel="stylesheet"
 			type="text/css"
