--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<!-- <meta
+		<meta
 			name="image"
 			property="og:image"
 			content="https://github.com/guny12/Capstone-Mise-En/blob/main/react-app/public/mise-en-logo.png"
-		/> -->
+		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<title>Mise-En</title>
