--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -5,7 +5,7 @@
 		<meta
 			name="image"
 			property="og:image"
-			content="https://github.com/guny12/Capstone-Mise-En/blob/main/react-app/public/mise-en-logo.png"
+			content="https://raw.githubusercontent.com/guny12/Capstone-Mise-En/main/react-app/public/mise-en-logo.png"
 		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
